syntax = "proto3";
package resourcestorage.v1;

import "google/api/annotations.proto";
import "google/protobuf/duration.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/descriptor.proto";
import "pagin.proto";

option go_package = "hope/api/param/resourcestorage/v1;v1";

// The ResourceStorage service definition.
service ResourceStorage {

  // 分页查询ResourceStorage
  rpc GetPageResourceStorage (ResourceStoragePageReq) returns (ResourceStoragePageReply)  {
    option (google.api.http) = {
      get: "/v1/resourcestorage/page"
    };
  }

  // 获取ResourceStorage
  rpc GetResourceStorage (ResourceStorageReq) returns (ResourceStorageReply)  {
    option (google.api.http) = {
      get: "/v1/resourcestorage/{id}"
    };
  }

  // 更新ResourceStorage
  rpc UpdateResourceStorage (ResourceStorageUpdateReq) returns (ResourceStorageUpdateReply)  {
    option (google.api.http) = {
      put: "/v1/resourcestorage/{id}"
      body: "*"
    };
  }

  // 创建ResourceStorage
  rpc CreateResourceStorage (ResourceStorageCreateReq) returns (ResourceStorageCreateReply)  {
    option (google.api.http) = {
      post: "/v1/resourcestorage"
      body: "*"
    };
  }

  // 删除ResourceStorage
  rpc DeleteResourceStorage (ResourceStorageDeleteReq) returns (ResourceStorageDeleteReply)  {
    option (google.api.http) = {
      delete: "/v1/resourcestorage/{id}"
    };
  }

  // 批量删除ResourceStorage
  rpc BatchDeleteResourceStorage (ResourceStorageBatchDeleteReq) returns (ResourceStorageDeleteReply)  {
    option (google.api.http) = {
      delete: "/v1/resourcestorage"
    };
  }

}

// 查询搜索请求
message ResourceStoragePageReq {
    //分页查询参数
    pagin.Pagination pagin = 1;
    //查询条件参数
    ResourceStorageReq param = 2;
}

// 查询搜索返回
message ResourceStoragePageReply {
    //分页参数
    pagin.Pagination pagin = 1;
    //查询条目
    repeated ResourceStorageReply items = 2;
}


// 查询搜索请求
message ResourceStorageReq {
    int64 id = 1;
    //分组
    int32 groupId = 2;
    //存储类型 1
    int32 storageType = 3;
    //文件真实的名称
    string realName = 4;
    //Bucket 识别符(七牛)
    string bucket = 5;
    //文件名称
    string name = 6;
    //后缀
    string suffix = 7;
    //路径
    string path = 8;
    //类型
    string type = 9;
    //大小
    string size = 10;
    //(sm.sm)删除的URL
    string deleteUrl = 11;
    //(sm.sm)图片名称
    string filename = 12;
    //文件名(七牛)
    string key = 13;
    //(sm.sm)图片高度
    string height = 14;
    //(sm.sm)图片地址
    string url = 15;
    //(sm.sm)用户名称
    string username = 16;
    //(sm.sm)图片宽度
    string width = 17;
    //(sm.sm)文件的MD5值
    string md5code = 18;
    //备注
    string remark = 19;
    //创建时间
    google.protobuf.Timestamp createdAt = 20;
    //更新时间
    google.protobuf.Timestamp updatedAt = 21;
    //创建者
    int64 createBy = 22;
    //更新者
    int64 updateBy = 23;
    //租户
    int64 tenantId = 24;

}

// 查询搜索返回
message ResourceStorageReply {
    int64 id = 1;
    //分组
    int32 groupId = 2;
    //存储类型 1
    int32 storageType = 3;
    //文件真实的名称
    string realName = 4;
    //Bucket 识别符(七牛)
    string bucket = 5;
    //文件名称
    string name = 6;
    //后缀
    string suffix = 7;
    //路径
    string path = 8;
    //类型
    string type = 9;
    //大小
    string size = 10;
    //(sm.sm)删除的URL
    string deleteUrl = 11;
    //(sm.sm)图片名称
    string filename = 12;
    //文件名(七牛)
    string key = 13;
    //(sm.sm)图片高度
    string height = 14;
    //(sm.sm)图片地址
    string url = 15;
    //(sm.sm)用户名称
    string username = 16;
    //(sm.sm)图片宽度
    string width = 17;
    //(sm.sm)文件的MD5值
    string md5code = 18;
    //备注
    string remark = 19;
    //创建时间
    google.protobuf.Timestamp createdAt = 20;
    //更新时间
    google.protobuf.Timestamp updatedAt = 21;
    //创建者
    int64 createBy = 22;
    //更新者
    int64 updateBy = 23;
    //租户
    int64 tenantId = 24;

}

// 创建ResourceStorage请求
message ResourceStorageCreateReq {
    //分组
    int32 groupId = 1;
    //存储类型 1
    int32 storageType = 2;
    //文件真实的名称
    string realName = 3;
    //Bucket 识别符(七牛)
    string bucket = 4;
    //文件名称
    string name = 5;
    //后缀
    string suffix = 6;
    //路径
    string path = 7;
    //类型
    string type = 8;
    //大小
    string size = 9;
    //(sm.sm)删除的URL
    string deleteUrl = 10;
    //(sm.sm)图片名称
    string filename = 11;
    //文件名(七牛)
    string key = 12;
    //(sm.sm)图片高度
    string height = 13;
    //(sm.sm)图片地址
    string url = 14;
    //(sm.sm)用户名称
    string username = 15;
    //(sm.sm)图片宽度
    string width = 16;
    //(sm.sm)文件的MD5值
    string md5code = 17;
    //备注
    string remark = 18;

}

// 创建ResourceStorage返回
message ResourceStorageCreateReply {
    int64 id = 1;
    //分组
    int32 groupId = 2;
    //存储类型 1
    int32 storageType = 3;
    //文件真实的名称
    string realName = 4;
    //Bucket 识别符(七牛)
    string bucket = 5;
    //文件名称
    string name = 6;
    //后缀
    string suffix = 7;
    //路径
    string path = 8;
    //类型
    string type = 9;
    //大小
    string size = 10;
    //(sm.sm)删除的URL
    string deleteUrl = 11;
    //(sm.sm)图片名称
    string filename = 12;
    //文件名(七牛)
    string key = 13;
    //(sm.sm)图片高度
    string height = 14;
    //(sm.sm)图片地址
    string url = 15;
    //(sm.sm)用户名称
    string username = 16;
    //(sm.sm)图片宽度
    string width = 17;
    //(sm.sm)文件的MD5值
    string md5code = 18;
    //备注
    string remark = 19;
    //创建时间
    google.protobuf.Timestamp createdAt = 20;
    //更新时间
    google.protobuf.Timestamp updatedAt = 21;
    //创建者
    int64 createBy = 22;
    //更新者
    int64 updateBy = 23;
    //租户
    int64 tenantId = 24;

}

// 更新ResourceStorage请求
message ResourceStorageUpdateReq {
    int64 id = 1;
    //分组
    int32 groupId = 2;
    //存储类型 1
    int32 storageType = 3;
    //文件真实的名称
    string realName = 4;
    //Bucket 识别符(七牛)
    string bucket = 5;
    //文件名称
    string name = 6;
    //后缀
    string suffix = 7;
    //路径
    string path = 8;
    //类型
    string type = 9;
    //大小
    string size = 10;
    //(sm.sm)删除的URL
    string deleteUrl = 11;
    //(sm.sm)图片名称
    string filename = 12;
    //文件名(七牛)
    string key = 13;
    //(sm.sm)图片高度
    string height = 14;
    //(sm.sm)图片地址
    string url = 15;
    //(sm.sm)用户名称
    string username = 16;
    //(sm.sm)图片宽度
    string width = 17;
    //(sm.sm)文件的MD5值
    string md5code = 18;
    //备注
    string remark = 19;

}


// 更新ResourceStorage返回
message ResourceStorageUpdateReply {
    int64 id = 1;
    //分组
    int32 groupId = 2;
    //存储类型 1
    int32 storageType = 3;
    //文件真实的名称
    string realName = 4;
    //Bucket 识别符(七牛)
    string bucket = 5;
    //文件名称
    string name = 6;
    //后缀
    string suffix = 7;
    //路径
    string path = 8;
    //类型
    string type = 9;
    //大小
    string size = 10;
    //(sm.sm)删除的URL
    string deleteUrl = 11;
    //(sm.sm)图片名称
    string filename = 12;
    //文件名(七牛)
    string key = 13;
    //(sm.sm)图片高度
    string height = 14;
    //(sm.sm)图片地址
    string url = 15;
    //(sm.sm)用户名称
    string username = 16;
    //(sm.sm)图片宽度
    string width = 17;
    //(sm.sm)文件的MD5值
    string md5code = 18;
    //备注
    string remark = 19;

}

// 删除ResourceStorage请求
message ResourceStorageDeleteReq {
    int64 id = 1;
}


// 批量删除ResourceStorage请求
message ResourceStorageBatchDeleteReq {
    repeated int64 ids = 1;
}


// 删除ResourceStorage返回
message ResourceStorageDeleteReply {
    bool result = 1;
}

